--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@ Created:        23/05/2016
 Last change:    23/05/2015
 -------------------------------------------------------------------*/
 
+/*------------------------------------------------------------------
+Project:        HaNgan
+Edit for:       Omar Sani
+URL:            
+Version:        1.0.1
+Created:        23/05/2016
+Last change:    05/08/2024
+-------------------------------------------------------------------*/
+
 
 /*------------------------------------------------------------------
 * Table of Content
@@ -120,7 +129,7 @@ ul.nav-mini li {
 
 ul.nav-mini li:after {
     content: "/";
-    color: #FFF;
+    color: #fa1d1d;
     margin-left: 10px;
 }
 
@@ -601,14 +610,14 @@ ul.nav-mini li a {
     width: 55%;
     margin: 0 auto;
     position: relative;
-    border: 2px solid rgba(255, 255, 255, 0.9);
+    border: 2px solid rgba(255, 19, 19, 0.9);
     border-radius: 50px;
     padding: 0 20px;
 }
 
 .main-search-form-wrapper .form-control {
     background: none;
-    color: #FFF;
+    color: #ff2e2e;
     border: 0;
     border-radius: 0;
     padding: 12px 0;
@@ -617,20 +626,20 @@ ul.nav-mini li a {
 
 .main-search-form-wrapper .row > div:last-child .form-control {
     padding-right: 25px;
-    border-left: 1px solid rgba(255, 255, 255, 0.7);
+    border-left: 1px solid rgba(255, 19, 19, 0.9);
     padding-left: 20px;
 }
 
 .main-search-form-wrapper .form-control::-moz-placeholder {
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 19, 19, 0.9);
 }
 
 .main-search-form-wrapper .form-control:-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 19, 19, 0.9);
 }
 
 .main-search-form-wrapper .form-control::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 19, 19, 0.9);
 }
 
 .main-search-form-wrapper .form-holder {
@@ -645,13 +654,13 @@ ul.nav-mini li a {
 
 .main-search-form-wrapper .btn-holder .btn {
     background: none;
-    color: rgba(255, 255, 255, 0.9);
+    color: rgba(255, 19, 19, 0.9);
     font-size: 20px;
 }
 
 .main-search-form-wrapper .btn-holder .btn:hover {
     padding-right: 15px;
-    color: #33B6CB;
+    color: #ffffff;
 }
 
 .main-search-wrapper {
@@ -936,6 +945,7 @@ ul.quick-search-keyword li:last-child a:after {
 .col-md-6 .featured-icon-01 {
     padding: 0 95px;
     margin: 25px 0 0;
+    background-color: #f80d0d;
 }
 
 .featured-icon-02 {
@@ -944,9 +954,9 @@ ul.quick-search-keyword li:last-child a:after {
 }
 
 .featured-icon-02 .icon {
-    color: #20B3E8;
+    color: #e82020;
     font-size: 32px;
-    background: #20B3E8;
+    background: #e82020;
     width: 80px;
     height: 80px;
     margin: 0 auto;
@@ -5785,7 +5795,7 @@ ul.static-page-menu li.active a {
 
 .login-box-wrapper .modal-header,
 .login-box-wrapper .modal-footer {
-    background: #EEE;
+    background: #d40000;
 }
 
 .login-box-wrapper .modal-body {
