--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ Last change:    23/05/2015
 -------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------
-Project:        HaNgan
+Project:        Blsa de Empleo Int
 Edit for:       Omar Sani
 URL:            
 Version:        1.0.1
@@ -99,7 +99,7 @@ Last change:    05/08/2024
 }
 
 .not-transparent-header .navbar-default {
-    background: #20262F;
+    background: #000000;
 }
 
 .logo-wrapper,
@@ -479,6 +479,25 @@ ul.nav-mini li a {
     background-size: cover;
 }
 
+.hero video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Para que el video se adapte y cubra todo el contenedor */
+    z-index: -2; /* Asegura que el video esté detrás del contenido */
+  }
+  .background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Simula el comportamiento de background-size: cover */
+    z-index: -1; /* Coloca el video detrás del contenido */
+}
+
 .hero::before {
     position: absolute;
     left: 0;
@@ -610,14 +629,14 @@ ul.nav-mini li a {
     width: 55%;
     margin: 0 auto;
     position: relative;
-    border: 2px solid rgba(255, 19, 19, 0.9);
+    border: 2px solid rgba(255, 255, 255, 0.9);
     border-radius: 50px;
     padding: 0 20px;
 }
 
 .main-search-form-wrapper .form-control {
     background: none;
-    color: #ff2e2e;
+    color: #ffffff;
     border: 0;
     border-radius: 0;
     padding: 12px 0;
@@ -626,20 +645,20 @@ ul.nav-mini li a {
 
 .main-search-form-wrapper .row > div:last-child .form-control {
     padding-right: 25px;
-    border-left: 1px solid rgba(255, 19, 19, 0.9);
+    border-left: 1px solid rgba(255, 255, 255, 0.9);
     padding-left: 20px;
 }
 
 .main-search-form-wrapper .form-control::-moz-placeholder {
-    color: rgba(255, 19, 19, 0.9);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .main-search-form-wrapper .form-control:-ms-input-placeholder {
-    color: rgba(255, 19, 19, 0.9);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .main-search-form-wrapper .form-control::-webkit-input-placeholder {
-    color: rgba(255, 19, 19, 0.9);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .main-search-form-wrapper .form-holder {
@@ -654,7 +673,7 @@ ul.nav-mini li a {
 
 .main-search-form-wrapper .btn-holder .btn {
     background: none;
-    color: rgba(255, 19, 19, 0.9);
+    color: rgba(255, 255, 255, 0.9);
     font-size: 20px;
 }
 
@@ -693,7 +712,7 @@ ul.nav-mini li a {
 }
 
 .second-search-result-wrapper {
-    background: #33B6CB;
+    background: #000000;
     padding-top: 30px;
     padding-bottom: 20px;
 }
@@ -722,7 +741,7 @@ ul.nav-mini li a {
     line-height: 1.42857143;
     padding-top: 10px;
     padding-bottom: 10px;
-    background: #505F6B;
+    background: #a51c1c;
     color: #FFF;
 }
 
@@ -1190,9 +1209,9 @@ ul.quick-search-keyword li:last-child a:after {
 .process-item .content h4,
 .process-item .content h5,
 .process-item .content h6 {
-    color: #33B6CB;
+    color: #000000;
     line-height: 1.2;
-    border-bottom: 2px solid #33B6CB;
+    border-bottom: 2px solid #000000;
     padding-bottom: 15px;
     letter-spacing: 1px;
 }
@@ -2369,7 +2388,7 @@ h4.sidebar-title {
 }
 
 .sidebar-link-list a {
-    color: #939393;
+    color: #cb3333;
     display: block;
     font-weight: 400;
 }
@@ -3024,8 +3043,8 @@ ul.pager-list li.paging-nav a {
 }
 
 ul.pager-list li.paging-nav a:hover {
-    background: #2991A2;
-    border-color: #2991A2;
+    background: #000000;
+    border-color: #BD0102;
     color: #FFF;
 }
 
@@ -5020,10 +5039,10 @@ ul.work-expereince-interest li .icon {
  */
 
 .main-footer {
-    background: #26262A;
+    background: #EF1718;
     padding-top: 60px;
     padding-bottom: 50px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgb(255 255 255 / 50%);
     line-height: 22px;
     font-size: 15px;
     font-weight: 400;
@@ -5042,7 +5061,7 @@ h5.footer-title {
     font-size: 20px;
     letter-spacing: 2px;
     margin: 0 0 25px;
-    color: #FFF;
+    color: #000000;
     position: relative;
 }
 
@@ -5202,8 +5221,8 @@ ul.bottom-footer-menu.for-social li:after {
 }
 
 .admin-sidebar {
-    background: #F5F5F5;
-    border: 1px solid #E6E6E6;
+    background: #EF1718;
+    border: 1px solid #000000;
     padding: 0;
     padding-top: 60px;
     margin-top: -51px;
@@ -5264,7 +5283,7 @@ ul.admin-user-menu li {
 ul.admin-user-menu li a {
     display: block;
     font-weight: 400;
-    color: #939393;
+    color: #ffffff;
     line-height: 1.2;
     margin: 12px 0;
     position: relative;
@@ -5280,13 +5299,13 @@ ul.admin-user-menu li a i {
 }
 
 ul.admin-user-menu li a:hover {
-    color: #2991A2;
+    color: #feffff;
     padding-left: 25px;
 }
 
 ul.admin-user-menu li.active a {
     font-weight: 600;
-    color: #33B6CB;
+    color: #ffffff;
 }
 
 .admin-section-title {
