--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ a:hover {
 }
 
 a {
-    color: #33B6CB;
+    color: #000000;
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -208,7 +208,7 @@ a {
 }
 
 a:hover {
-    color: #2991A2;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -226,7 +226,7 @@ h6,
 .h6 {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
-    color: #333;
+    color: #ffffff;
     font-weight: 400;
 }
 
@@ -388,7 +388,7 @@ blockquote,
     color: #777;
     font-weight: 300;
     margin: 30px 0;
-    border-left: 5px solid #33B6CB;
+    border-left: 5px solid #000000;
 }
 
 hr {
@@ -1419,7 +1419,7 @@ ul.list-icon li p:not(:last-child) {
 }
 
 ul.list-icon li .icon {
-    color: #33B6CB;
+    color: #000000;
     font-size: 24px;
     left: -50px;
 }
@@ -2413,11 +2413,11 @@ section.sm,
 }
 
 .link-info {
-    color: #2E8ED7 !important;
+    color: #000000 !important;
 }
 
 .link-info:hover {
-    color: #287CBD !important;
+    color: #000000 !important;
 }
 
 .link-success {
@@ -2516,7 +2516,7 @@ a.link-alt:hover {
 
 label {
     font-size: 15px;
-    color: #424242;
+    color: #ffffff;
     font-weight: 400;
     font-family: 'Montserrat', sans-serif;
     display: block;
@@ -2533,7 +2533,7 @@ label {
 }
 
 .form-control:focus {
-    border-color: #33B6CB;
+    border-color: #000000;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -2710,12 +2710,12 @@ h6.heading {
  */
 
 .bg-primary {
-    background: #33B6CB !important;
+    background: #000000 !important;
     color: #FFF !important;
 }
 
 .bg-info {
-    background: #006C95 !important;
+    background: #000000 !important;
     color: #FFF !important;
 }
 
@@ -3141,12 +3141,12 @@ h6.heading {
 
 .btn-primary.btn-inverse:hover {
     color: #FFF !important;
-    background: #33B6CB;
+    background: #000000;
 }
 
 .btn-info.btn-inverse:hover {
     color: #FFF !important;
-    background: #287CBD;
+    background: #000000;
 }
 
 .btn-success.btn-inverse:hover {
