--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ ul.nav-mini.sign-in li:after {
 }
 
 ul.nav-mini.sign-in li a {
-    border: 1px solid rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(141, 141, 141, 0.8);
     line-height: 1;
     border-radius: 2px;
     font-weight: 600;
@@ -193,7 +193,7 @@ ul.nav-mini.sign-in li a:hover {
     text-transform: lowercase;
     letter-spacing: 1px;
     padding-left: 14px;
-    color: #FFF;
+    color: #9f9f9f;
 }
 
 .nav.navbar-nav > li:last-child > a {
@@ -332,7 +332,7 @@ ul.nav-mini li {
 }
 
 ul.nav-mini li a {
-    color: #FFF;
+    color: #858585f0;
     -webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
     -ms-transition: all 0.3s ease-in-out 0s;
@@ -503,7 +503,7 @@ ul.nav-mini li a {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(255, 255, 255, 0.442);
     content: "";
 }
 
